cpp_sdk/examples/sdk_test_cpp/src/errorcompile.txt
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:5:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:143:20: error: 'write_bytes_raw' is a private member of 'SpacetimeDb::bsatn::Writer'
  143 |             writer.write_bytes_raw(this->value.data(), this->value.size());
      |                    ^
../../../sdk/include\spacetimedb/bsatn/writer.h:99:14: note: declared private here
   99 |         void write_bytes_raw(const void* data, size_t size);
      |              ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:5:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:146:50: error: member access into incomplete type '::SpacetimeDb::bsatn::Reader'
  146 |             std::vector<std::byte> bytes = reader.read_bytes(IDENTITY_SIZE);
      |                                                  ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:7:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    7 |         class Reader;
      |               ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:161:42: error: member access into incomplete type '::SpacetimeDb::bsatn::Reader'
  161 |             this->ms_since_epoch = reader.read_u64_le();
      |                                          ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:7:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    7 |         class Reader;
      |               ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:169:44: error: member access into incomplete type '::SpacetimeDb::bsatn::Reader'
  169 |             this->timestamp_micros = reader.read_u64_le();
      |                                            ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:7:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    7 |         class Reader;
      |               ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:184:57: error: member access into incomplete type '::SpacetimeDb::bsatn::Reader'
  184 |             std::vector<std::byte> id_bytes_vec = reader.read_bytes(sizeof(this->id));
      |                                                         ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:7:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    7 |         class Reader;
      |               ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:201:39: error: member access into incomplete type '::SpacetimeDb::bsatn::Reader'
  201 |             this->nanoseconds = reader.read_i64_le();
      |                                       ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:7:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    7 |         class Reader;
      |               ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:211:20: error: 'write_bytes_raw' is a private member of 'SpacetimeDb::bsatn::Writer'
  211 |             writer.write_bytes_raw(this->data.data(), sizeof(this->data)); // Fallback
      |                    ^
../../../sdk/include\spacetimedb/bsatn/writer.h:99:14: note: declared private here
   99 |         void write_bytes_raw(const void* data, size_t size);
      |              ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:5:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:217:50: error: member access into incomplete type '::SpacetimeDb::bsatn::Reader'
  217 |             std::vector<std::byte> bytes = reader.read_bytes(sizeof(this->data));
      |                                                  ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:7:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    7 |         class Reader;
      |               ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:229:20: error: 'write_bytes_raw' is a private member of 'SpacetimeDb::bsatn::Writer'
  229 |             writer.write_bytes_raw(this->data.data(), sizeof(this->data)); // Fallback
      |                    ^
../../../sdk/include\spacetimedb/bsatn/writer.h:99:14: note: declared private here
   99 |         void write_bytes_raw(const void* data, size_t size);
      |              ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:5:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:234:50: error: member access into incomplete type '::SpacetimeDb::bsatn::Reader'
  234 |             std::vector<std::byte> bytes = reader.read_bytes(sizeof(this->data));
      |                                                  ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:7:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    7 |         class Reader;
      |               ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:5:
../../../sdk/include\spacetimedb/macros.h:130:32: warning: '/*' within block comment [-Wcomment]
  130 | namespace SpacetimeDb::bsatn { /* Functions in SpacetimeDb::bsatn namespace */ \
      |                                ^
../../../sdk/include\spacetimedb/macros.h:136:67: error: unknown type name '_actual_cpp_type_name_'
  136 | inline void serialize(::SpacetimeDb::bsatn::Writer& writer, const _actual_cpp_type_name_& value) {
      |                                                                   ^
../../../sdk/include\spacetimedb/macros.h:141:8: error: unknown type name '_actual_cpp_type_name_'
  141 | inline _actual_cpp_type_name_ deserialize<_actual_cpp_type_name_>(::SpacetimeDb::bsatn::Reader& reader) {
      |        ^
../../../sdk/include\spacetimedb/macros.h:141:43: error: use of undeclared identifier '_actual_cpp_type_name_'
  141 | inline _actual_cpp_type_name_ deserialize<_actual_cpp_type_name_>(::SpacetimeDb::bsatn::Reader& reader) {
      |                                           ^~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:145:7: error: extraneous closing brace ('}')
  145 |     } \
      |       ^
../../../sdk/include\spacetimedb/macros.h:146:3: error: unknown type name 'END_COMMENT_BLOCK_ENUM'
  146 | } \
      |   ^
../../../sdk/include\spacetimedb/macros.h:147:25: error: expected unqualified-id
  147 | END_COMMENT_BLOCK_ENUM* /
      |                         ^
../../../sdk/include\spacetimedb/macros.h:293:32: warning: '/*' within block comment [-Wcomment]
  293 | namespace SpacetimeDb::bsatn { /* Functions in SpacetimeDb::bsatn namespace */ \
      |                                ^
../../../sdk/include\spacetimedb/macros.h:299:79: error: unknown type name '_actual_cpp_type_name_'
  299 |             inline void serialize(::SpacetimeDb::bsatn::Writer& writer, const _actual_cpp_type_name_& value) {
      |                                                                               ^
../../../sdk/include\spacetimedb/macros.h:301:30: error: use of undeclared identifier 'SPACETIMEDB_XX_SERIALIZE_FIELD'
  301 |                 FIELDS_MACRO(SPACETIMEDB_XX_SERIALIZE_FIELD, writer, value); \
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:304:24: error: unknown type name '_actual_cpp_type_name_'
  304 |                 inline _actual_cpp_type_name_ deserialize<_actual_cpp_type_name_>(::SpacetimeDb::bsatn::Reader& reader) {
      |                        ^
../../../sdk/include\spacetimedb/macros.h:304:59: error: use of undeclared identifier '_actual_cpp_type_name_'
  304 |                 inline _actual_cpp_type_name_ deserialize<_actual_cpp_type_name_>(::SpacetimeDb::bsatn::Reader& reader) {
      |                                                           ^~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:309:15: error: extraneous closing brace ('}')
  309 |             } \
      |               ^
../../../sdk/include\spacetimedb/macros.h:310:3: error: unknown type name 'END_COMMENT_BLOCK_STRUCT'
  310 | } \
      |   ^
../../../sdk/include\spacetimedb/macros.h:311:27: error: expected unqualified-id
  311 | END_COMMENT_BLOCK_STRUCT* /
      |                           ^
2 warnings and 23 errors generated.
emcc: error: ''C:/Users/ludvi/emsdk/upstream/bin\clang.exe' -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr '--sysroot=C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot' -DEMSCRIPTEN -Xclang '-iwithsysroot/include\fakesdl' -Xclang '-iwithsysroot/include\compat' -std=c++20 -I../../../sdk/include -ferror-limit=500 -c sdk_test.cpp -o 'C:\Users\ludvi\AppData\Local\Temp\emscripten_temp_l_6mq8vy\sdk_test_0.o'' failed (returned 1)
